# StatusMonitor

./: CMakeLists.txt  LICENSE.txt  README.md
cmake/: FindOpenCL.cmake
src/: CMakeLists.txt  HealthMonitorData.cpp  HealthTest.cpp  StatusMonitorData.cpp  threadManagement.cpp  timer.cpp
src/include/: HealthMonitorData.h  Helper.h  StatusMonitorData.h  Timer.h  threadManagement.h
